tests/fixtures/stl/errors/test_unexpected_token.stl
// Error: unexpected token in field definition
// expect-error: Unexpected token `unknown` while parsing top level statements of a Record
prompt broken {
  is {
    name is ??? ;
  }
}
export broken as main;
